--- a/templates/admin/user_edit.html
+++ b/templates/admin/user_edit.html
@@ -31,16 +31,12 @@
                 <div class="box-body">
                   <form role="form">
                     <div class="form-group">
-                      <label>用户学号</label>
+                      <label>用户名</label>
                       <input id="username" type="text" class="form-control" placeholder="" value="{{view_user.username}}" disabled />
                     </div>
                     <div class="form-group">
-                      <label>用户昵称</label>
-                      <input id="nickname" type="text" class="form-control" placeholder="" value="{{view_user.nickname or ''}}" />
-                    </div>
-                    <div class="form-group">
-                      <label>用户姓名</label>
-                      <input id="name" type="text" class="form-control" placeholder="" value="{{view_user.name  or ''}}" />
+                      <label>手机</label>
+                      <input id="mobile" type="text" class="form-control" placeholder="" value="{{view_user.mobile or ''}}" />
                     </div>
                     <div class="form-group">
                       <label>用户性别</label>
@@ -52,21 +48,12 @@
                     {%if user_info.admin == 'admin'%}
                     <div class="form-group">
                       <label>用户角色</label>
-                      <select id="admin" class="form-control" value="{{view_user.admin or 'student'}}">
-                        <option {% if view_user.admin != 'teacher' and view_user.admin != 'admin' %} selected="selected" {% endif %}>student</option>
-                        <option {% if view_user.admin == 'teacher' %} selected="selected" {% endif %}>teacher</option>
+                      <select id="admin" class="form-control" value="{{view_user.admin or 'normal'}}">
+                        <option {% if view_user.admin == 'normal' %} selected="selected" {% endif %}>normal</option>
                         <option {% if view_user.admin == 'admin' %} selected="selected" {% endif %}>admin</option>
                       </select>
                     </div>
                     {%endif%}
-                    <div class="form-group">
-                      <label>用户课程</label>
-                      <div class="tag">
-                        <input type="hidden" name="node" id="pSingleField" value="{{courseStr}}">
-                        <ul id="pTags" class=""></ul>
-                    </div>
-                    </div>
-
                   </form>
                 </div><!-- /.box-body -->
               </div><!-- /.box -->
@@ -89,22 +76,6 @@
 <script type="text/javascript">
 $(document).ready(function() {
         $("[data-mask]").inputmask();
-
-    var sampleTags = [];
-    $.getJSON('/admin/get/courses', function(data) {
-        $.each(data, function(key, val) {
-            sampleTags.push(val);
-        });
-    });
-
-
-    $("#pTags").tagit({
-        placeholderText: '为该用户添加课程',
-        availableTags: sampleTags,
-        singleField: true,
-        allowSpaces: true, //标签中是否允许空格
-        singleFieldNode: $('#pSingleField') //将值保存到mySingleField元素
-    });
 });
 
 $(document).on('click', '#save-base', function() {
@@ -115,13 +86,10 @@ $(document).on('click', '#save-base', function() {
     dataType: "json",
     url: "/api/update/user/base?uid=" + user_id,
     data: JSON.stringify({
-      nickname: $('#nickname').val(),
-      name: $('#name').val(),
       gender: $('#gender').val(),
       {%if user_info.admin == 'admin'%}
       admin: $('#admin').val(),
       {%endif%}
-      courses: $('#pSingleField').val(),
     }),
     success: function(msg) {
       alert(msg.message);
