--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>在线课程 | 控制面板</title>
+    <title>游侠 | 控制面板</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.4 -->
     <link href="/static/AdminLTE/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />    
@@ -44,9 +44,9 @@
         <!-- Logo -->
         <a href="/admin" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini">东大</span>
+          <span class="logo-mini">游侠</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg">在线课程 | 控制面板</span>
+          <span class="logo-lg">游侠 | 控制面板</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -59,13 +59,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="/static/AdminLTE/img/user2-160x160.png" class="user-image" alt="User Image"/>
+                  <img src="/static/AdminLTE/img/youxia.jpg" class="user-image" alt="User Image"/>
                   <span class="hidden-xs">{{user_info.username}}{%if user_info.name%}-{{user_info.name}}{%endif%}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="/static/AdminLTE/img/user2-160x160.png" class="img-circle" alt="User Image" />
+                    <img src="/static/AdminLTE/img/youxia.jpg" class="img-circle" alt="User Image" />
                     <p>
                       {{user_info.username}}{%if user_info.name%}-{{user_info.name}}{%endif%}
                     </p>
@@ -96,7 +96,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="/static/AdminLTE/img/user2-160x160.png" class="img-circle" alt="User Image" />
+              <img src="/static/AdminLTE/img/youxia.jpg" class="img-circle" alt="User Image" />
             </div>
             <div class="pull-left info">
               <p>{{user_info.username}}{%if user_info.name%}-{{user_info.name}}{%endif%}</p>
@@ -129,9 +129,9 @@
               </a>
             </li>
             {% endif %}
-            <li {% if side_menu == "tasks" %}class="active"{% endif %}>
-              <a href="/admin/courses">
-                <i class="fa fa-tasks"></i> <span>课程管理</span>
+            <li {% if side_menu == "nowfeeds" %}class="active"{% endif %}>
+              <a href="/admin/nowfeeds">
+                <i class="fa fa-tasks"></i> <span>NowFeed</span>
               </a>
             </li>
             <li {% if side_menu == "personal" %}class="active"{% endif %}>
