--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -39,21 +39,23 @@
           <table class="table table-hover">
             <tr>
               <th>ID</th>
-              <th>用户学号</th>
-              <th>姓名</th>
+              <th>用户名</th>
+              <th>手机</th>
               <th>用户角色</th>
               <th>性别</th>
               <th>注册时间</th>
+              <th>最近登录</th>
               <th>操作</th>
             </tr>
             {% for user in all_users.list %}
             <tr id="user-{{user.uid}}">
               <td>{{user.uid}}</td>
               <td>{{user.username}}</td>
-              <td>{{user.name or "/"}}</td>
-              <td>{{user.admin or "student"}}</td>
+              <td>{{user.mobile or "/"}}</td>
+              <td>{{user.admin or "normal"}}</td>
               <td>{{user.gender or "/"}}</td>
               <td>{{user.created}}</td>
+              <td>{{user.last_login or "/"}}</td>
               <td>
                 <div class="btn-group">
                   <a href="/admin/user/edit/{{user.uid}}" type="button" class="btn btn-default btn-xs">
