--- a/static/css/main.css
+++ b/static/css/main.css
@@ -216,3 +216,7 @@ fieldset {
     display: none !important;
     position: static;
 }
+
+a:hover, a:focus {
+    text-decoration: none !important;
+}
