--- a/templates/admin/nowfeed_new.html
+++ b/templates/admin/nowfeed_new.html
@@ -53,6 +53,18 @@
                       <label>Link</label>
                       <input id="link" type="text" class="form-control"/>
                     </div>
+                    <div class="form-group">
+                      <label>Type</label>
+                      <select id="nowfeed_type" class="form-control" >
+                        <option>text</option>
+                        <option>image</option>
+                        <option>video</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label>Time</label>
+                      <input id="video_time" type="text" class="form-control"/>
+                    </div>
                   </form>
                 </div><!-- /.box-body -->
               </div><!-- /.box -->
@@ -94,6 +106,8 @@ $(document).on('click', '#save-nowfeed', function() {
       image: $('#image').val(),
       source: $('#source').val(),
       link: $('#link').val(),
+      nowfeed_type: $('#nowfeed_type').val(),
+      video_time: $('#video_time').val(),
     }),
     success: function(msg) {
       if (msg.success == 0) {
