--- a/static/css/main.css
+++ b/static/css/main.css
@@ -242,7 +242,7 @@ a:hover, a:focus {
     color: inherit !important;
 }
 .nowfeed-content:hover {
-    background: #f1f2f3!important;
+    background: #f9fafc !important;
 }
 #global-scoreboard {
     position: static !important;
@@ -254,3 +254,779 @@ a:hover, a:focus {
 .col-p {
     width: 900px !important;
 }
+#global-viewport #pane-main {
+    background: #f9fafc !important;
+}
+.now-feed-item {
+    border: 1px solid #e3e6ee !important;
+    border-radius: 5px !important;
+}
+.container-wrapper {
+	border: 1px solid #e3e6ee !important;
+    border-radius: 5px !important;
+}
+.favfeed_item {
+	border: 1px solid #e3e6ee !important;
+    border-radius: 5px !important;
+}
+
+/*ifanr*/
+.o-single-content {
+    position: relative;
+    float: left;
+    min-height: 100%;
+    overflow: hidden;
+    background-color: #eff3fa;
+}
+.o-single-content__header {
+    height: 395px;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    overflow: hidden;
+    z-index: 1;
+    width: 900px;
+    float: right;
+}
+.o-single-content__header::before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '';
+    background-color: rgba(0,0,0,.55);
+}
+.o-single-content__header .c-single-normal__header {
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+}
+.o-single-content__body {
+    position: relative;
+    padding-right: 70px;
+    padding-left: 25px;
+    width: 900px;
+    float: right;
+    z-index: 2;
+}
+
+.c-article-header-meta {
+    color: #fff;
+    font-size: 16px;
+    line-height: 1;
+}
+.c-article-header-meta__category::before {
+    margin-right: 8px;
+    font-size: 15px;
+}
+.c-article-header-meta__category::before, .ifanrx-title:before {
+    content: "\e601";
+}
+.c-article-header-meta__category::after {
+    content: '|';
+    display: inline-block;
+    margin-left: 7px;
+    margin-right: 2px;
+    font-size: 16px;
+}
+h1.c-single-normal__title {
+    padding: 17.5px 0 0;
+    margin: 23.5px 0 0;
+    border-top: 1px dashed rgba(255,255,255,.3);
+    color: #fff !important;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 45px;
+}
+.o-single-content__body--main {
+    padding-top: 25px;
+    background-color: #fff;
+}
+.o-single-content__body {
+    position: relative;
+    padding-right: 70px;
+    padding-left: 25px;
+    width: 900px;
+    float: right;
+    z-index: 2;
+}
+.o-single-content__body--main {
+    padding-top: 25px;
+    background-color: #fff;
+}
+.o-single-content__body {
+    position: relative;
+    padding-right: 70px;
+    padding-left: 25px;
+    width: 900px;
+    float: right;
+    z-index: 2;
+}
+.c-social-bar, .slick-next::before, .slick-prev::before {
+    display: inline-block;
+}
+.c-social-bar {
+    text-align: left;
+    position: relative;
+    z-index: 100;
+}
+.c-social-bar--left {
+    float: left;
+}
+.c-social-bar--vertical {
+    -webkit-transition: top .3s ease-in-out;
+    transition: top .3s ease-in-out;
+    will-change: top;
+}
+.c-social-bar--vertical .c-social-bar__counter {
+    margin-bottom: 10px;
+    color: #999;
+    font-family: Arial,SourceHanSansCN;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 12px;
+}
+.c-social-bar--vertical .c-social-bar__counter>b {
+    display: block;
+    color: #333;
+    font-size: 18px;
+    font-family: HelveticaNeue;
+    line-height: 28px;
+}
+.c-social-bar__icon, .slick-next, .slick-prev {
+    margin: 0;
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    outline: 0;
+}
+.c-social-bar__icon {
+    height: 18px;
+    position: relative;
+    text-align: center;
+    width: 18px;
+}
+.c-social-bar--vertical .c-social-bar__icon {
+    display: block;
+    margin-top: 5px;
+}
+.c-social-bar--sqaured .c-social-bar__icon {
+    height: 25px;
+    line-height: 25px;
+    width: 25px;
+    color: #bfbfbf;
+}
+.c-social-bar--sqaured .c-social-bar__icon--weibo {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.c-social-bar--sqaured .c-social-bar__icon--weibo::before {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0 auto;
+    font-size: 20px;
+}
+.c-card-author__contact--weibo::before, .c-contacts__icon--weibo::before, .c-header-logo__icon--weibo::before, .c-social-bar__icon--weibo::before, .ifanrx-weibo:before {
+    content: "\e612";
+}
+.c-social-bar--sqaured .c-social-bar__icon--wechat {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.c-social-bar__icon--wechat__qrcode {
+    opacity: 0;
+    -webkit-transition: .2s opacity ease,visibility .2s;
+    transition: .2s opacity ease,visibility .2s;
+    visibility: hidden;
+}
+.c-popup-qrcode {
+    background-color: #fff;
+    border: 1px solid #d2d2d2;
+    border-radius: 4px;
+    box-shadow: 0 4px 10px rgba(0,0,0,.12);
+    height: 190px;
+    width: 170px;
+    z-index: 100;
+}
+.c-social-bar--vertical .c-social-bar__icon--wechat__qrcode::before {
+    border-bottom: solid 7px transparent;
+    border-left: solid 7px transparent;
+    border-right: solid 7px transparent;
+    border-top: solid 7px transparent;
+    border-right-color: #d2d2d2;
+    content: "";
+    left: -14px;
+    position: absolute;
+    top: 8px;
+    z-index: 1;
+}
+.c-popup-qrcode__title {
+    background-color: #f7f7f7;
+    border-radius: 4px;
+    height: 32px;
+    line-height: 32px;
+}
+.c-popup-qrcode__hint, .c-popup-qrcode__title {
+    color: #999;
+    font-size: 13px;
+}
+
+.c-popup-qrcode__image {
+    height: 105px;
+    margin: 5px auto 0;
+    width: 105px;
+}
+
+.c-popup-qrcode__hint {
+    line-height: 15px;
+    margin: 0 auto;
+    width: 120px;
+}
+.c-article-comments-form__close, .c-article-comments-item-voting--down, .c-article-comments-item-voting--up, .c-article-comments__submit-shortcut, .c-article-header-meta__category::before, .c-article-likes__button::before, .c-article-nav__header__icon, .c-author-contact__item__icon, .c-card-author__contact, .c-card-meta__info--comments::before, .c-card-meta__info--like::before, .c-contacts__icon--email::before, .c-contacts__icon--rss::before, .c-contacts__icon--twitter::before, .c-contacts__icon--wechat::before, .c-contacts__icon--weibo::before, .c-dasheng-sliders__control, .c-decoration--menu, .c-featured-slider .slick-next, .c-featured-slider .slick-prev, .c-goto-top-item--contribute, .c-goto-top-item--contribute:hover, .c-goto-top-item--go, .c-goto-top-item--qrcodes, .c-header-logo__icon--rss, .c-header-logo__icon--twitter, .c-header-logo__icon--wechat, .c-header-logo__icon--weibo, .c-mindstore-widget-vote__icon, .c-player-progress__state, .c-player-screen__content__play, .c-social-bar__icon--comments, .c-social-bar__icon--douban, .c-social-bar__icon--email, .c-social-bar__icon--linkedin, .c-social-bar__icon--more, .c-social-bar__icon--qzone, .c-social-bar__icon--rss, .c-social-bar__icon--twitter, .c-social-bar__icon--wechat, .c-social-bar__icon--weibo, .c-swiper-btn--next-page, .c-swiper-btn--prev-page, .c-top-navbar-dropdown-button__hint, .c-top-navbar-home-btn, .c-top-navbar-preview__abstract--mindstore__meta__comment, .c-top-navbar-preview__abstract--mindstore__meta__vote, .c-top-navbar-preview__abstract--video__img, .c-top-navbar-search-btn, .c-top-navbar-search-btn--close, .c-video-list__more__link, .c-video-player__chooser__control, .ifanrx {
+    font-family: ifanrx!important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: .2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+.c-social-bar--sqaured .c-social-bar__icon--twitter {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.c-social-bar--sqaured .c-social-bar__icon--twitter::before {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0 auto;
+    font-size: 18px;
+}
+.c-card-author__contact--twitter::before, .c-contacts__icon--twitter::before, .c-header-logo__icon--twitter::before, .c-social-bar__icon--twitter::before, .ifanrx-twitter:before {
+    content: "\e60f";
+}
+.c-social-bar--sqaured .c-social-bar__icon--linkedin {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.c-social-bar--sqaured .c-social-bar__icon--linkedin::before {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0 auto;
+    font-size: 17px;
+}
+.c-card-author__contact--linkedin::before, .c-social-bar__icon--linkedin::before, .ifanrx-linkedin:before {
+    content: "\e615";
+}
+.c-social-bar--sqaured .c-social-bar__icon--douban {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.c-social-bar--sqaured .c-social-bar__icon--douban::before {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0 auto;
+    font-size: 16px;
+}
+.c-card-author__contact--douban::before, .c-social-bar__icon--douban::before, .ifanrx-douban:before {
+    content: "\e617";
+}
+.c-social-bar--sqaured .c-social-bar__icon--qzone {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.c-social-bar--sqaured .c-social-bar__icon--qzone::before {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 0 auto;
+    font-size: 20px;
+}
+.c-card-author__contact--qzone::before, .c-social-bar__icon--qzone::before, .ifanrx-qzone:before {
+    content: "\e613";
+}
+.c-article-meta {
+    display: table;
+    margin-bottom: 28px;
+}
+.o-single-content__body__content {
+    width: 720px;
+    float: right;
+}
+
+.c-article-tags {
+    padding-right: 40px;
+    display: table-cell;
+}
+
+.c-article-tags__item {
+    text-decoration: none;
+    outline: 0;
+    display: inline-block;
+    float: left;
+    padding: 0 10px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    background-color: #f5f5f5;
+    border-radius: 2px;
+    border-bottom: 0;
+    color: #999;
+    font-size: 12px;
+    line-height: 25px;
+    cursor: pointer;
+}
+.c-article-sns {
+    display: table-cell;
+    padding-left: 1px;
+    white-space: nowrap;
+    vertical-align: top;
+    width: 1%;
+}
+.c-card, .c-card-meta {
+    overflow: hidden;
+    position: relative;
+}
+.c-card-meta__info {
+    margin: 0;
+    border: 0;
+    outline: 0;
+    padding: 0;
+    background-color: transparent;
+    color: #b3b3b3;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 15px;
+}
+.c-card-meta__info--comments {
+    position: relative;
+    margin-left: 10px;
+    color: #b3b3b3;
+    line-height: 15px;
+}
+.c-article-sns__info {
+    display: inline-block;
+    margin-top: 0;
+    line-height: 32px;
+    margin-right: 0;
+}
+.c-article-sns__info:first-child {
+    margin-left: 0;
+}
+.c-card-author__contact--comments::before, .c-card-meta__info--comments::before, .c-social-bar__icon--comments::before, .c-top-navbar-preview__abstract--mindstore__meta__comment::before, .ifanrx-comments:before {
+    content: "\e60d";
+}
+.c-card-meta__info--comments::before, .c-card-meta__info--like::before {
+    margin-right: 5px;
+    line-height: 15px;
+    font-size: 13px;
+    position: relative;
+    vertical-align: bottom;
+}
+.c-card-meta__info--comments::before {
+    color: #e0e0e0;
+    top: 0;
+}
+.c-article-sns__info::before {
+    line-height: 32px;
+    vertical-align: bottom;
+}
+.c-card-meta--darken .c-card-meta__info::before {
+    color: #a9b1be;
+}
+.c-card-meta__info--like {
+    position: relative;
+    margin-left: 10px;
+    color: #b3b3b3;
+    line-height: 15px;
+}
+.c-card-meta__info--like::before {
+    color: #e0e0e0;
+}
+.c-article-likes__button::before, .c-card-meta__info--like::before, .ifanrx-like:before {
+    content: "\e622";
+}
+.s-single-article, .s-single-article p {
+    font-size: 16px;
+    color: #333;
+    line-height: 29px;
+}
+.s-single-article {
+    margin-bottom: 23px;
+}
+.o-single-content__body__content {
+    width: 720px;
+    float: right;
+}
+
+.c-article-content {
+    margin: 0 auto;
+}
+.s-single-article p {
+    margin: 0 0 16px;
+}
+.news-feed-story-package.top p, .s-single-article, .s-single-article p {
+    font-size: 16px;
+    color: #333;
+    line-height: 29px;
+}
+
+.c-article-likes {
+    overflow: hidden;
+}
+
+.c-article-likes__button {
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    display: inline-block;
+    min-width: 105px;
+    cursor: pointer;
+    box-sizing: border-box;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: 4px;
+    color: #999;
+    font-size: 15px;
+    line-height: 38px;
+}
+.c-article-likes__button::before {
+    display: inline-block;
+    font-size: 19px;
+    vertical-align: bottom;
+    margin-right: 10px;
+}
+.c-article-likes__button::before, .c-card-meta__info--like::before, .ifanrx-like:before {
+    content: "\e622";
+}
+
+.c-article-likes__avatars {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    float: right;
+    line-height: 40px;
+}
+
+.c-article-likes__user, .c-article-likes__user>img {
+    line-height: 30px;
+    display: inline-block;
+}
+.c-article-likes__user>img {
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+    vertical-align: bottom;
+    margin-right: 5px;
+}
+.c-article-likes__user, .c-article-likes__user>img {
+    line-height: 30px;
+    display: inline-block;
+}
+.c-jiong--block, .c-jiong__image {
+    display: block;
+    width: 100%;
+}
+.c-jiong-report {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 45px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 85px;
+    background-color: #f7f7f7;
+    color: #535353;
+    font-size: 14px;
+}
+.c-jiong-report p {
+    margin: 0 auto;
+    text-align: center;
+}
+.c-jiong-report a, .c-jiong-report p {
+    display: inline-block;
+    line-height: 35px;
+}
+.c-jiong-report a {
+    text-decoration: none;
+    outline: 0;
+    width: 105px;
+    margin-left: 25px;
+    background-color: #e12f11;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+}
+.c-jiong-report a, .c-jiong-report p {
+    display: inline-block;
+    line-height: 35px;
+}
+.c-jiong--bottom {
+    margin-top: 10px;
+}
+.c-jiong--block, .c-jiong__image {
+    display: block;
+    width: 100%;
+}
+
+.c-jiong__image {
+    height: auto;
+}
+.c-jiong--block, .c-jiong__image {
+    display: block;
+    width: 100%;
+}
+.c-article-comments {
+    background-color: #fff;
+    margin-top: 35px;
+}
+.c-article-comments__nav {
+    margin: 30px 0;
+}
+.c-article-comments__list {
+    list-style: none;
+    padding: 0;
+    margin: 30px 0 0;
+    overflow: hidden;
+}
+.c-article-comments__list>li {
+    margin-bottom: 38px;
+}
+.c-article-comments-item::after, .c-article-comments-item::before {
+    content: '';
+    display: block;
+    clear: both;
+}
+.c-article-comments-item__avatar {
+    display: inline-block;
+    float: left;
+    width: 40px;
+    height: auto;
+    border-radius: 50%;
+}
+.c-article-comments-item__info {
+    display: block;
+    width: 670px;
+    float: right;
+    clear: right;
+}
+.c-article-comments-item__name {
+    color: #666;
+    font-size: 12px;
+    font-weight: 700;
+    margin-right: 10px;
+    line-height: 1;
+}
+.c-article-comments-item__meta {
+    color: #b3b3b3;
+    font-size: 12px;
+    line-height: 1;
+}
+.c-article-comments-item__hint {
+    display: none;
+    margin: 9px 0;
+    background-color: #f5f5f5;
+    border-radius: 3px;
+    color: #999;
+    font-size: 14px;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+}
+.is-high .c-article-comments-item__content {
+    padding: 0 5px;
+    margin: 9px 0;
+}
+.c-article-comments-item p {
+    padding: 0;
+    margin: 9px 0;
+    color: #333;
+    font-size: 14px;
+    line-height: 20px;
+}
+.is-high .c-article-comments-item__content p {
+    background-color: #fef1e9;
+    display: inline;
+    box-shadow: 5px 0 0 #fef1e9,-5px 0 0 #fef1e9;
+    padding: 3px 0;
+    line-height: 25px;
+}
+.is-high .c-article-comments-item__content p::before {
+    display: block;
+    content: " ";
+}
+.c-article-comments-item__reply {
+    color: #ef2f11;
+    font-size: 13px;
+}
+.c-article-comments-item-voting, .c-article-comments-item__reply {
+    margin: 0;
+    border: 0;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline: 0;
+}
+.c-article-comments-item-voting--down, .c-article-comments-item-voting--down:hover, .c-article-comments-item-voting--down:hover::before {
+    color: #666;
+}
+.c-article-comments-item-voting {
+    float: right;
+    font-size: 12px;
+    vertical-align: bottom;
+    line-height: 27px;
+}
+.c-article-comments-item-voting, .c-article-comments-item__reply {
+    margin: 0;
+    border: 0;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline: 0;
+}
+.c-article-comments-item-voting--down::before {
+    color: #b3b3b3;
+}
+.c-article-comments-item-voting::before {
+    font-size: 9px;
+    margin-right: 5px;
+    vertical-align: middle;
+}
+.c-article-comments-item-voting--down::before, .ifanrx-vote-down:before {
+    content: "\e61f";
+}
+.c-article-comments-item-voting--up {
+    margin-right: 13px;
+    color: #666;
+}
+.c-article-comments-item-voting--up::before, .c-mindstore-widget-vote__icon::before, .ifanrx-vote-up:before {
+    content: "\e620";
+}
+.c-article-comments__list form, .c-article-comments__list ul {
+    margin-top: 0;
+}
+.c-article-comments-replies {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: #f9fafc;
+    border-left: 3px solid #e5e5e5;
+}
+.c-article-comments-item__info {
+    display: block;
+    width: 670px;
+    float: right;
+    clear: right;
+}
+.c-article-comments-replies__item {
+    border-bottom: 1px dashed #e5e5e5;
+    overflow: hidden;
+}
+.c-article-comments-replies__item__wrapper {
+    padding: 18px 12px 15.5px;
+}
+.c-article-comments-item__name {
+    color: #666;
+    font-size: 12px;
+    font-weight: 700;
+    margin-right: 10px;
+    line-height: 1;
+}
+.c-article-comments-item__meta {
+    color: #b3b3b3;
+    font-size: 12px;
+    line-height: 1;
+}
+.c-article-comments-item__hint {
+    display: none;
+    margin: 9px 0;
+    background-color: #f5f5f5;
+    border-radius: 3px;
+    color: #999;
+    font-size: 14px;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+}
+.c-article-comments-item__hint--secondary {
+    background: 0 0;
+    border-radius: 0;
+    text-align: left;
+    line-height: 12px;
+}
+.c-article-comments-item a {
+    text-decoration: none;
+    outline: 0;
+    color: #333;
+}
+.c-article-comments-item__meta {
+    color: #b3b3b3;
+    font-size: 12px;
+    line-height: 1;
+}
+.c-article-comments-item__hint--secondary>span {
+    color: #999;
+    font-size: 12px;
+    display: inline-block;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 1px;
+}
+.c-article-comments-item p {
+    padding: 0;
+    margin: 9px 0;
+    color: #333;
+    font-size: 14px;
+    line-height: 20px;
+}
+.c-article-comments-replies p {
+    padding: 0;
+    margin: 9px 0 5.5px;
+    font-size: 14px;
+    line-height: 21px;
+}
+.c-article-comments-item-voting, .c-article-comments-item__reply {
+    margin: 0;
+    border: 0;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline: 0;
+}
+.c-article-comments-item__reply {
+    color: #ef2f11;
+    font-size: 13px;
+}
+.c-article-comments-replies__reply {
+    min-width: 0;
+    border: 0;
+    font-size: 12px;
+    font-weight: 200;
+    line-height: 1;
+}
+
+
+
