--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="/static/css/page.css">
     <link class="page-type-include" rel="stylesheet" href="/static/css/index.css">
     <link rel="stylesheet" href="/static/css/main.css" />
-<style type="text/css" adt="123"></style></head>
+    {% block stylesheet %}{% endblock %}</head>
 
 <body class="index desktop page-context-top prod null" data-pagetype="index" data-sport="" data-customstylesheet="null">
     
