--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,7 @@
 {% extends 'layout.html' %} 
+{% block stylesheet %}
+<link rel="stylesheet" href="/static/css/post.css" />
+{% endblock %}
 {% block main %}
         <section id="pane-main">
 
@@ -14,13 +17,13 @@
                                     <!--no cache-->
                                     <article data-id="17145771" class="news-feed-item top news-feed-story-package no-thumb" data-pos="1">
                                         <div class="o-single-content" id="single-content-wrapper">
-      <div id="article-header" class="o-single-content__header" style="background-image: url('http://ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310title.jpg')">
+      <div id="article-header" class="o-single-content__header" style="background-image: url('http://imageqiniu.xxxxxbbs.com/FiX_TMei2VLGjbLKp1MdatB8TkMI?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5')">
         <div class="o-single-content__body c-single-normal__header">
           <div class="c-article-header-meta">
-            <span class="c-article-header-meta__category">应用</span>
+            <span class="c-article-header-meta__category">越野</span>
             <span class="c-article-header-meta__time">13 小时前</span>
           </div>
-          <h1 class="c-single-normal__title">爱范儿客户端新版上线 不妥协只为做到更好</h1>
+          <h1 class="c-single-normal__title">告别小白马，迎接大红马，就为了后排大一点。带杂图调味。</h1>
         </div>
       </div>
       <div class="o-single-content__body o-single-content__body--main">
@@ -55,20 +58,20 @@
 <article class="o-single-content__body__content c-article-content s-single-article js-article">
   
 <p>今年 2 月爱范儿 iPhone 客户端 3.0 版本上线时，我们曾发布了一篇题为《<a href="http://www.ifanr.com/623230">这个搞了 438 天的 App，有什么不一样的想法和故事？</a>》的文章。 从那时起，我们在时隔 400 多天后重新启动了 App 更新的步伐。4 月 8 日，爱范儿 Android 客户端 3.0 版本上线，安卓用户也可以在软件内第一时间获取爱范儿所有的内容。</p>
-<p><img class="alignnone size-full wp-image-695550 aligncenter" src="http://ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310dl.jpg" alt="ifanr310dl" width="720" height="450" srcset="//ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310dl.jpg 720w, //ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310dl-360x225.jpg 360w" sizes="(max-width: 720px) 100vw, 720px"></p>
+<p><img class="alignnone size-full wp-image-695550 aligncenter" src="http://imageqiniu.xxxxxbbs.com/FnOpGi-p-x-uOBmkcksyT-8BDCZs?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" alt="ifanr310dl" width="720" height="450" srcset="http://imageqiniu.xxxxxbbs.com/FnOpGi-p-x-uOBmkcksyT-8BDCZs?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" sizes="(max-width: 720px) 100vw, 720px"></p>
 <p><strong>现在，我们同时为大家送上 iPhone 及 Android 平台的 <a href="http://www.ifanr.com/promote/ifanr-app/">v3.1.0 版本更新</a>。</strong></p>
 <p>全局夜间模式、滑动返回、字号调节和图片保存等新功能同时加入，相信它们能够提升您的使用体验。</p>
-<p><img class="alignnone size-full wp-image-695754 aligncenter" src="http://ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310screen1-1.jpg" alt="ifanr310screen1" width="720" height="428" srcset="//ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310screen1-1.jpg 720w, //ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanr310screen1-1-360x214.jpg 360w" sizes="(max-width: 720px) 100vw, 720px"></p>
+<p><img class="alignnone size-full wp-image-695754 aligncenter" src="http://imageqiniu.xxxxxbbs.com/FrF3MeoJxOnc_96Zteir6M6o93xn?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" alt="ifanr310screen1" width="720" height="428" srcset="http://imageqiniu.xxxxxbbs.com/FrF3MeoJxOnc_96Zteir6M6o93xn?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" sizes="(max-width: 720px) 100vw, 720px"></p>
 <p>也许不少人喜欢在订阅软件，微信公众号中阅读我们的内容，但我们相信，爱范儿客户端会为大家提供更及时、更全面的内容以及更为优秀的阅读体验。iOS &amp; Android 开发团队也将坚守阵地为大家带来更为优秀的产品。</p>
 <p>也许微软已然放弃 Windows 移动平台， Windows Phone 平台的用户占比也已然达不到 1%，但我们不会止步，尽最大努力为大家带来 UWP 平台的爱范儿客户端，因为那是爱范儿 App 出发的地方。</p>
-<p><img class="alignnone size-full wp-image-695521 aligncenter" src="http://ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanrwp1.jpg" alt="ifanrwp1" width="720" height="500" srcset="//ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanrwp1.jpg 720w, //ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/ifanrwp1-360x250.jpg 360w" sizes="(max-width: 720px) 100vw, 720px"></p>
+<p><img class="alignnone size-full wp-image-695521 aligncenter" src="http://imageqiniu.xxxxxbbs.com/FpC2mv9p_Tn1rmdXfvANY_mWbGHh?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" alt="ifanrwp1" width="720" height="500" srcset="http://imageqiniu.xxxxxbbs.com/FpC2mv9p_Tn1rmdXfvANY_mWbGHh?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" sizes="(max-width: 720px) 100vw, 720px"></p>
 <p>开头<a href="http://www.ifanr.com/623230">那篇文章</a>的结尾处，我们曾说：</p>
 <blockquote><p>438 天，代表的是爱范儿的坚持，我们的不妥协。</p></blockquote>
 <p><strong>在未来无数个 438 天中，我们依然会坚持下去。<a href="http://www.ifanr.com/promote/ifanr-app/">爱范儿 3.1 </a>，更需要大家的鞭策和鼓励，未来的道路请随我们一同前行。</strong></p>
 <p>最后，为我们的兄弟打个广告。本周五，也就是 8 月 5 日，我们的 AppSo Android 版客户端将会正式发布，如果你是喜欢体验和分享各类 App 和游戏的 Android 手机玩家，可千万不要错过。</p>
-<p><img class="alignnone size-full wp-image-695398 aligncenter" src="http://ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/appsoyugao.jpg" alt="appsoyugao" width="720" height="480" srcset="//ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/appsoyugao.jpg 720w, //ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/appsoyugao-360x240.jpg 360w" sizes="(max-width: 720px) 100vw, 720px"></p>
+<p><img class="alignnone size-full wp-image-695398 aligncenter" src="http://imageqiniu.xxxxxbbs.com/Fl9JD9XifPEGoM9MVOlPddDZXc3F?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" alt="appsoyugao" width="720" height="480" srcset="http://imageqiniu.xxxxxbbs.com/Fl9JD9XifPEGoM9MVOlPddDZXc3F?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" sizes="(max-width: 720px) 100vw, 720px"></p>
 <p>感谢大家一直以来对爱范儿的支持，我们会再接再厉带来更多精彩内容。在使用过程中遇到任何问题欢迎联系爱范君（微信号：ifanrjun / ifanrjun2）、加入下面的微信群进行反馈，或在这篇文章的评论中留下您的建议和意见，十分感谢！</p>
-<p><img class="alignnone size-full wp-image-696223 aligncenter" src="//ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/appwechatgroup.jpg" alt="appwechatgroup" width="720" height="450" srcset="//ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/appwechatgroup.jpg 720w, //ifanr-cdn.b0.upaiyun.com/wp-content/uploads/2016/08/appwechatgroup-360x225.jpg 360w" sizes="(max-width: 720px) 100vw, 720px"></p>
+<p><img class="alignnone size-full wp-image-696223 aligncenter" src="http://imageqiniu.xxxxxbbs.com/Fv-q3QaE35lWTnfIqmOJ4V6Lp_6B?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" alt="appwechatgroup" width="720" height="450" srcset="http://imageqiniu.xxxxxbbs.com/Fv-q3QaE35lWTnfIqmOJ4V6Lp_6B?imageView2/2/w/728/q/100|watermark/1/image/aHR0cDovLzd4c2N3NS5jb20wLnowLmdsYi5xaW5pdWNkbi5jb20vd2F0ZXJtYXJrLnBuZw==/gravity/South/dy/5" sizes="(max-width: 720px) 100vw, 720px"></p>
 
   </article>
         <div class="o-single-content__body__content">
